# tiny-mcp

./: CMakeLists.txt  README.md
.dew/: graph.json  state.md
.dew/docs/: fast-debrief.md  fast-plan.md
examples/notes/: CMakeLists.txt
examples/notes/src/: main.cpp  notes.cpp  notes.h
include/tiny-mcp/: mcp_server.h  mcp_tool_set.h  mcp_types.h
src/: mcp_server.cpp
tests/: CMakeLists.txt  test_mcp_server.cpp  test_tool_set.cpp
